feat: allow deleting of configurations

--- a/src/app/pages/configuration/components/assessment-config/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-config/assessment-list/assessment-list.component.html
@@ -55,7 +55,7 @@
                 <i class="fa fa-edit"></i>
                 <span> Edit</span>
               </button>
-              <button mat-menu-item>
+              <button mat-menu-item (click)="onDeletConfig(indicator.id)">
                 <i class="fa fa-trash"></i>
                 <span> Delete</span>
               </button>
