--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -15,9 +15,13 @@
    </ngx-dhis2-org-unit-filter>
   </div>
   <div class="main-container col-9">
-      <div class="alert alert-primary">
-          Loading Assessment Form
-        </div>
-      <mat-spinner class="spinner"></mat-spinner>
+      <ngx-dhis2-period-filter
+      [selectedPeriods]="selectedPeriodItems"
+      [periodFilterConfig]="periodFilterConfig"
+      [lowestPeriodType]="'Monthly'"
+      (update)="onPeriodUpdate($event, 'UPDATE')"
+      (change)="onPeriodUpdate($event, 'CHANGE')"
+      (close)="onPeriodUpdate($event, 'CLOSE')"
+    ></ngx-dhis2-period-filter>
   </div>
 </div>
