--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -14,10 +14,17 @@
         (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
      </ngx-dhis2-org-unit-filter>
     </div>
-    <div class="main-container col-9">
-        <div class="alert alert-primary">
-            Loading Verification Form
+    <div class="main col-9">
+        <div class="card-header">
+            Select Period
           </div>
-        <mat-spinner class="spinner"></mat-spinner>
+        <ngx-dhis2-period-filter
+      [selectedPeriods]="selectedPeriodItems"
+      [periodFilterConfig]="periodFilterConfig"
+      [lowestPeriodType]="'Monthly'"
+      (update)="onPeriodUpdate($event, 'UPDATE')"
+      (change)="onPeriodUpdate($event, 'CHANGE')"
+      (close)="onPeriodUpdate($event, 'CLOSE')"
+    ></ngx-dhis2-period-filter>
     </div>
   </div>
