feat: allow deleting of verification configurations

--- a/src/app/pages/configuration/components/assessment-config/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-config/assessment-list/assessment-list.component.html
@@ -55,7 +55,10 @@
                 <i class="fa fa-edit"></i>
                 <span> Edit</span>
               </button>
-              <button mat-menu-item (click)="onDeletConfig(indicator.id)">
+              <button
+                mat-menu-item
+                (click)="onDeleteConfig($event, indicator.id)"
+              >
                 <i class="fa fa-trash"></i>
                 <span> Delete</span>
               </button>
