--- a/src/app/pages/configuration/components/verification-config/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-config/verification-list/verification-list.component.html
@@ -43,7 +43,6 @@
           <td>{{ indicator.indicator }}</td>
           <td>{{ indicator.dataElement | dataElement }}</td>
           <td>{{ indicator.unitFee }}</td>
-          <td>{{ indicator.toleranceRate }}</td>
           <td>{{ indicator.lastUpdate | date }}</td>
           <td>
             <button
@@ -59,7 +58,10 @@
                 <i class="fa fa-edit"></i>
                 <span> Edit</span>
               </button>
-              <button mat-menu-item>
+              <button
+                mat-menu-item
+                (click)="onDeleteConfig($event, indicator.id)"
+              >
                 <i class="fa fa-trash"></i>
                 <span> Delete</span>
               </button>
