refactor: Added Assessment Form

--- a/src/app/pages/configuration/components/verification-config/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-config/verification-list/verification-list.component.html
@@ -18,7 +18,7 @@
         (verificationIndicators$ | async) &&
         !(verificationConfigurationError$ | async)
       "
-      class="overflow-auto tableContainer"
+      class="overflow-auto tableContainer table-bordered"
       class="table table-hover"
     >
       <thead>
