--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -52,13 +52,14 @@
                   <td>{{ indicator.indicator }}</td>
                   <td><input value="{{ indicator.possibleMaxValue }}" disabled></td>
                   <td>
-                    <input>
-                    <select>
+                    <input class="small">
+                    <select class="small">
+                      <option>Select</option>
                       <option>Applicable</option>
                       <option>Not Applicable</option>
                     </select>
                   </td>
-                  <td><input disabled></td>
+                  <td><input class="small" disabled></td>
                   <td><input></td>
                 </tr>
               </tbody>
