refactor: Added Selection filter

--- a/src/app/pages/report/components/report/report.component.html
+++ b/src/app/pages/report/components/report/report.component.html
@@ -1,1 +1,5 @@
-
+<ngx-dhis2-selection-filters
+  (filterUpdate)="onFilterUpdateAction($event)"
+  [dataSelections]="dataSelections"
+  [selectionFilterConfig]="selectionFilterConfig">
+</ngx-dhis2-selection-filters>
