--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -74,7 +74,9 @@
                 </tr>
               </tbody>
             </table>
-            <button class="btn btn-group btn-primary"></button>
+            <button class="btn btn-group btn-primary">Complete</button>
+            <button class="btn btn-group btn-primary">Incomplete</button>
+            <button class="btn btn-group btn-primary">Run Validation</button>
           </form>
         </div>
       </div>
