style(Verification Component): Styled the toggle buttons to show period and OrgUnits

--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -1,7 +1,10 @@
-.main{
+.main {
   margin-top: 4px;
 }
-.alert{
+.alert {
   margin-top: 25%;
   text-align: center;
+}
+.card-header {
+  width: 100%;
 }
