--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -1,30 +1,63 @@
 <div class="main">
-    <div class="card-header">
-      Verfication Form
-    </div>
-    <div class="row">
-    <div class="main col-3">
-      <div class="card-header">
+  <div class="card-header">
+    Verfication Form
+  </div>
+  <div class="row">
+    <div class="main col-6">
+      <button
+        class="card-header btn-group dropdown-toggle"
+        (click)="onOrgUnitToggle()"
+      >
         Select Organisation
-      </div>
+      </button>
       <ngx-dhis2-org-unit-filter
+        *ngIf="showOrgUnitFilter"
         [orgUnitFilterConfig]="orgUnitFilterConfig"
         [selectedOrgUnitItems]="selectedOrgUnitItems"
         (orgUnitUpdate)="onOrgUnitUpdate($event, 'UPDATE')"
-        (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
-     </ngx-dhis2-org-unit-filter>
+        (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')"
+      >
+      </ngx-dhis2-org-unit-filter>
     </div>
-    <div class="main col-9">
-        <div class="card-header">
-            Select Period
-          </div>
-        <ngx-dhis2-period-filter
-      [selectedPeriods]="selectedPeriodItems"
-      [periodFilterConfig]="periodFilterConfig"
-      [lowestPeriodType]="'Monthly'"
-      (update)="onPeriodUpdate($event, 'UPDATE')"
-      (change)="onPeriodUpdate($event, 'CHANGE')"
-      (close)="onPeriodUpdate($event, 'CLOSE')"
-    ></ngx-dhis2-period-filter>
+    <div class="main col-6">
+      <button
+        class="card-header btn-group dropdown-toggle"
+        (click)="onPeriodToggle()"
+      >
+        Select Period
+      </button>
+      <ngx-dhis2-period-filter
+        *ngIf="showPeriodFilter"
+        [selectedPeriods]="selectedPeriodItems"
+        [periodFilterConfig]="periodFilterConfig"
+        [lowestPeriodType]="'Monthly'"
+        (update)="onPeriodUpdate($event, 'UPDATE')"
+        (change)="onPeriodUpdate($event, 'CHANGE')"
+        (close)="onPeriodUpdate($event, 'CLOSE')"
+      ></ngx-dhis2-period-filter>
     </div>
   </div>
+  <div>
+    <form>
+      <h3>Period Type? OrgUnit? Data Verification Form</h3>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+        </tbody>
+      </table>
+    </form>
+  </div>
+</div>
