refactor(Verification Component): Added a Verification form

--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -8,3 +8,11 @@
 .card-header {
   width: 100%;
 }
+.form {
+  margin: 5px;
+  text-align: center;
+}
+.btn-form {
+  width: 32%;
+  margin: 3px;
+}
