refactor: Edited verification form

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -39,7 +39,7 @@
       <!-- OrgUnitName will be plugged here -->
       <br />OrgUnit Name?
       <table class="table table-bordered table-hover">
-        <thead>
+        <thead class="card-header">
           <tr>
             <th scope="col" rowspan="2">S/No</th>
             <th scope="col" rowspan="2">Indicator</th>
