chore: updated the dhis2 http client service

--- a/src/app/pages/configuration/components/assessment-config/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-config/assessment-list/assessment-list.component.html
@@ -67,7 +67,7 @@
         </tr>
       </tbody>
     </table>
-    <button class="add" (click)="onClickAdd()">
+    <button class="add" (click)="onClickAdd($event)">
         <i class="savage fa fa-plus"></i>
       </button>
   </div>
