style: Edited smooth touches on the add button position

--- a/src/app/pages/configuration/components/verification-config/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-config/verification-list/verification-list.component.html
@@ -3,7 +3,7 @@
     Verification Indicators
   </div>
 
-  <div>
+  <div class="overflow-auto tableContainer">
     <p
       *ngIf="
         (verificationConfigurationError$ | async) ||
@@ -69,8 +69,8 @@
         </tr>
       </tbody>
     </table>
+    <button class="add" (click)="onClickAdd()">
+      <i class="savage fa fa-plus"></i>
+    </button>
   </div>
-  <button class="add" (click)="onClickAdd()">
-    <i class="savage fa fa-plus"></i>
-  </button>
 </div>
