--- a/src/app/pages/configuration/components/general/general.component.css
+++ b/src/app/pages/configuration/components/general/general.component.css
@@ -3,10 +3,10 @@
 }
 .col {
   text-align: right;
-}
-mat-form-field {
-  width: 70%;
-}
-.col {
   padding-right: 20px;
+  width: 100% !important;
+}
+mat-form-field,
+table {
+  width: 70%;
 }
