refactor(Verification Component): Added Form indicators and unit fee

--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -28,3 +28,12 @@ em {
 .filter {
   margin-left: 44%;
 }
+table td {
+  text-align: left;
+}
+table input {
+  text-align: center;
+}
+table thead {
+  font-size: -5px;
+}
